tests/snapshots/integration__malformed_group_mismatched_end_keyword_reports_diagnostic.snap
---
source: tests/integration.rs
expression: stderr
---
<fixture>:6:1: error[E_GROUP_END_KIND]: `end par` does not match open `alt` block
end par
^^^^^^^
